debug: add test API route

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -2,6 +2,5 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "framework": "nextjs",
   "installCommand": "cd ../.. && bun install",
-  "buildCommand": "cd ../.. && bun run --filter web build",
-  "outputDirectory": ".next"
+  "buildCommand": "cd ../.. && bun run --filter web build"
 }
